# Yukkuri-Mandarin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CD.yml  CI.yml  python-package.yml
docs/: CHANGELOG.md  Contents.md  database-mngr.md  installation.md  phonology.md  usage.md
tests/: modify_pydb.py  test.py  test_core.py  test_database.py  test_db_mngr.py  test_digit_to_chinese.py  test_generate_gana.py  test_generate_table.py  test_hanzi.py  test_non_hanzi.py  test_post_process.py  test_pre_process.py
tests/test_data/: temp_test_mngr.db
yukkurimandarin/: __init__.py  core.py  database.py  database_mngr.py  digit_to_chinese.py  generate_gana.py  generate_table.py  hanzi_process.py  non_hanzi_process.py  post_process.py  pre_process.py  settings.py
yukkurimandarin/data/: yinjie_database.db
